{
    "name": "DefaultInputActions",
    "maps": [
        {
            "name": "DefaultActionsMap",
            "id": "c6340bbf-bbcf-44ff-8c13-d0363db2bc12",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "8c1f29a8-286d-4d10-8d2b-29620ac72e55",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClickRelease",
                    "type": "Button",
                    "id": "d16a2d9f-0c36-404e-ab09-878167d3b6b7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5fbdff4b-f0cb-4a39-afbc-ce29f6de29d0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91a1fa48-6f80-4dba-a654-23e6e3ca77e8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClickRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": []
        }
    ]
}